# cpp_simples

./: .gitignore  CMakeLists.txt  Pointer.hpp  PointerTuple.hpp  UniquePtr.hpp  simples.cpp
test/: CMakeLists.txt  MockDeleter.hpp  PointerTests.cpp  PointerTupleTests.hpp  TestCommon.hpp  UniquePtrTest.hpp  pointer_construction_test.cpp  pointer_invalid_construction_test.cpp  test.cpp
